syntax = "proto3";
package grpc.user;

option go_package = "github.com/ivamshky/go-crud/gen/grpc/user";

service UserService {
  rpc GetUser(GetUserRequest) returns (User) {}
  rpc CreateUser(CreateUserRequest) returns (User) {}
  rpc UpdateUser(CreateUserRequest) returns (User) {}
  rpc DeleteUser(DeleteUserRequest) returns (EmptyResponse) {}
}

message GetUserRequest{
  int64 id = 1;
}

message EmptyResponse{}

message DeleteUserRequest{
    int64 id = 1;
}

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  int32 age = 3;
}
